--- a/WebContent/Enter.html
+++ b/WebContent/Enter.html
@@ -17,98 +17,144 @@
 <script src="js/animated-headline.js"></script>
 <script src="js/custom.js"></script>
 
+<script>
+
+
+
+</script>
+
+
 </head>
 <body>
 
-	<nav
-		class="navbar navbar-toggleable-sm navbar-light fixed-top">
+	<div class="container">
 
-		<button type="button" class="navbar-toggler navbar-toggler-right"
-			data-toggle="collapse" data-target="#mynavbar"
-			aria-controls="mynavbar" aria-expanded="false"
-			aria-label="Toggle navigation" style="margin-top: 30px;">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+		<nav class="navbar navbar-toggleable-sm navbar-light fixed-top">
 
-
-		<a class="navbar-brand" href="#"><span><img
-				style="height: 50px;" src="img/Logo_DX.png"></span> DesignX</a>
+			<button type="button" class="navbar-toggler navbar-toggler-right"
+				data-toggle="collapse" data-target="#mynavbar"
+				aria-controls="mynavbar" aria-expanded="false"
+				aria-label="Toggle navigation" style="margin-top: 30px;">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
 
+			<a class="navbar-brand" href="#"><span><img
+					style="height: 50px;" src="img/Logo_DX.png"></span> DesignX</a>
 
-		<div class="collapse navbar-collapse text-xs-center" id="mynavbar">
 
-			<div class="col-lg-8 col-sm-8 form-inline navbar-form justify-content-center">
-				<div class="input-group">
-					<form class="form-inline my-lg-0">
-						<input class="form-control " type="text" placeholder="Search">
-						<button class="btn btn-outline-default my-2 my-sm-0" type="submit">Search</button>
-					</form>
 
+			<div class="collapse navbar-collapse text-xs-center" id="mynavbar">
+
+				<div
+					class="col-lg-8 col-sm-8 form-inline navbar-form justify-content-center">
+					<div class="input-group">
+						<form class="form-inline my-lg-0">
+							<input class="form-control " type="text" placeholder="Search">
+							<button class="btn btn-outline-default my-2 my-sm-0"
+								type="submit">Search</button>
+						</form>
+
+					</div>
 				</div>
+
+				<ul class="navbar-nav w-100 justify-content-end">
+
+					<li class="nav-item" style="margin-right: 15px;">
+						<div class="btn-group">
+							<a class="btn nav-link dropdown-toggle" data-toggle="dropdown"
+								href="#" role="button" aria-haspopup="true"
+								aria-expanded="false" role="button"> <i class="fa fa-plus"
+								aria-hidden="true"></i>
+							</a>
+							<div class="dropdown-menu dropdown-menu-right">
+								<a class="dropdown-item" href="#">Action</a> <a
+									class="dropdown-item" href="#">Another action</a> <a
+									class="dropdown-item" href="#">Something else here</a>
+							</div>
+						</div>
+					</li>
+
+					<li class="nav-item " style="margin-right: 15px;">
+
+						<div class="btn-group">
+							<a class="btn nav-link dropdown-toggle " data-toggle="dropdown"
+								href="#" role="button" aria-haspopup="true"
+								aria-expanded="false" role="button"> <i class="fa fa-bell"
+								aria-hidden="true"></i> <span class="label label-default">5</span>
+							</a>
+							<div class="dropdown-menu dropdown-menu-right">
+								<a class="dropdown-item" href="#">Action</a> <a
+									class="dropdown-item" href="#">Another action</a> <a
+									class="dropdown-item" href="#">Something else here</a>
+							</div>
+						</div>
+
+					</li>
+
+					<li class="nav-item" style="margin-right: 15px;">
+						<div class="btn-group">
+							<a class="btn nav-link dropdown-toggle navbar-text"
+								data-toggle="dropdown" href="#" role="button"
+								aria-haspopup="true" aria-expanded="false" aria-hidden="true"
+								style="text-align: center;" role="button"> Logout </a>
+
+							<div class="dropdown-menu dropdown-menu-right">
+								<a class="dropdown-item" href="#">Action</a> <a
+									class="dropdown-item" href="#">Another action</a> <a
+									class="dropdown-item" href="#">Something else here</a>
+							</div>
+						</div>
+					</li>
+
+				</ul>
+
+
 			</div>
 
-			<ul class="navbar-nav w-100 justify-content-end">
+		</nav>
 
-				<li class="nav-item" style="margin-right: 15px;">
-					<div class="btn-group">
-						<a class="btn nav-link dropdown-toggle" data-toggle="dropdown"
-							href="#" role="button" aria-haspopup="true" aria-expanded="false"
-							role="button"> <i class="fa fa-plus" aria-hidden="true"></i>
-						</a>
-						<div class="dropdown-menu dropdown-menu-right">
-							<a class="dropdown-item" href="#">Action</a> <a
-								class="dropdown-item" href="#">Another action</a> <a
-								class="dropdown-item" href="#">Something else here</a>
-						</div>
+		<!-- 
+		<div
+			style="width: 100%; height: 120%; background-color: white; background-size: 100% 100%; margin-top: 150px;">
+ -->
+
+		<div class="row" style="width: 100%; height: 120%; background-color: white; background-size: 100% 100%; margin-top: 150px;max-width: 1000px;">
+
+			<nav class="col-sm-3 col-lg-3 first_top navbar" id = "sidenav" style="margin-top: 10%;">
+				<ul class="nav nav-pills col-lg-12 col-sm-12 flex-column" style="position:fixed; max-width: 150px;">
+					<li class="nav-item"><a class="nav-link active" href="#">Section 1</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Section 2</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Section 3</a></li>
+				</ul>
+			</nav>
+
+			<div class="mt-5 ml-5 col-lg-7 col-sm-7">
+
+				<div class="card">
+
+					<h4 class="card-title text-center mt-3">Your Repositories</h4>
+					<div class="panel-body" style="max-height: 500;overflow-y: scroll;">
+						<ul class="list-group list-group-flush card-block">
+
+							<a href="#" class="list-group-item list-group-item-action">Dapibus
+								ac facilisis in</a>
+							<a href="#" class="list-group-item list-group-item-action">Morbi
+								leo risus</a>
+							<a href="#" class="list-group-item list-group-item-action">Porta
+								ac consectetur ac</a>
+
+						</ul>
 					</div>
-				</li>
+				</div>
 
-				<li class="nav-item " style="margin-right: 15px;">
-
-					<div class="btn-group">
-						<a class="btn nav-link dropdown-toggle " data-toggle="dropdown"
-							href="#" role="button" aria-haspopup="true" aria-expanded="false"
-							role="button"> <i class="fa fa-bell" aria-hidden="true"></i>
-							<span class="label label-default">5</span>
-						</a>
-						<div class="dropdown-menu dropdown-menu-right">
-							<a class="dropdown-item" href="#">Action</a> <a
-								class="dropdown-item" href="#">Another action</a> <a
-								class="dropdown-item" href="#">Something else here</a>
-						</div>
-					</div>
-
-				</li>
-
-				<li class="nav-item" style="margin-right: 15px;">
-					<div class="btn-group">
-						<a class="btn nav-link dropdown-toggle navbar-text"
-							data-toggle="dropdown" href="#" role="button"
-							aria-haspopup="true" aria-expanded="false" aria-hidden="true"
-							style="text-align: center;" role="button"> Logout </a>
-
-						<div class="dropdown-menu dropdown-menu-right">
-							<a class="dropdown-item" href="#">Action</a> <a
-								class="dropdown-item" href="#">Another action</a> <a
-								class="dropdown-item" href="#">Something else here</a>
-						</div>
-					</div>
-				</li>
-
-			</ul>
-
+		    </div>
 
 		</div>
 
-	</nav>
 
-	<div
-		style="width: 100%; height: 120%; background-color: white; background-size: 100% 100%;">
+
 	</div>
-
-
-
 
 
 </body>
