--- a/WebContent/Profile.html
+++ b/WebContent/Profile.html
@@ -1,20 +1,24 @@
 <html>
 <head>
 
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>DesignX</title>
-<link rel="stylesheet"
+  <!-- Required meta tags always come first -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>DesignX</title>
+    
+    <!-- Bootstrap CSS -->   
+    <link rel="stylesheet"
 	href="bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css">
-<link rel="stylesheet"
+    
+    <!-- font awesome css -->
+    <link rel="stylesheet"
 	href="font-awesome-4.7.0/css/font-awesome.min.css">
 
-<script src="js/jquery.js"></script>
-<script src="bootstrap-4.0.0-alpha.6-dist/js/bootstrap.min.js"></script>
-<script src="js/modernizr.js"></script>
-<script src="js/animated-headline.js"></script>
-<script src="js/custom.js"></script>
+    <!-- project css -->
+    <link rel="stylesheet" href="css/footer.css">
+  
 </head>
 <body>
 
@@ -87,5 +91,14 @@
 
 
 	</div>
+	
+	 <footer class="footer">
+                <p class="text-center pt-3">© NeedKnowledge</p>
+        </footer>
+	
+   <!-- jQuery first, then Bootstrap JS. -->	
+   <script src="js/jquery.js"></script>
+   <script src="bootstrap-4.0.0-alpha.6-dist/js/bootstrap.min.js"></script>
+
 </body>
 </html>
