--- a/WebContent/login_bs.html
+++ b/WebContent/login_bs.html
@@ -1,37 +1,47 @@
 <html>
 <head>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="bootstrap-3.3.7/css/bootstrap.min.css">
-<script src="jquery.js"></script>
-<script src="bootstrap-4.0.0-alpha.6-dist/js/bootstrap.min.js"></script>
-<link type="text/css" rel="stylesheet" href="login_bs.css">
+  <!-- Required meta tags always come first -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>DesignX</title>
+
+    <!-- Bootstrap CSS -->   
+    <link rel="stylesheet"
+	href="bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css">
+
+    <!-- font awesome css -->
+    <link rel="stylesheet"
+	href="font-awesome-4.7.0/css/font-awesome.min.css">
+
+    <!-- project css -->
+    <link rel="stylesheet" href="css/login_bs.css">
 
 </head>
 <body>
 
 	<div class="row">
-		<div class="col-md-3"></div>
-		<div class="col-md-5">
+		<div class="col-md-4"></div>
+		<div class="col-md-4">
 
-			<div class="panel panel-default " align="center">
+			<div class="card card-alignment" align="center">
 				<form action="Login_sql" role="form" method="post">
 
-					<div class="panel-heading">
-						<h1 class="panel-title">Login</h1>
-					</div>
-					<div class="panel-body">
+					<div class="card-block">
+						<h2 class="card-title pb-3">Login</h2>
 						<div class="form-group ">
-							<label for="user">Email:</label> <i
-								class="glyphicon glyphicon-user "></i> <input type="text"
-								class="form-control box " id="user" name="user"
+							<label for="user">Email:</label> 
+							 <input type="text"
+								class="form-control box text-center " id="user" name="user"
 								placeholder="Enter your email" required="required">
+						
+								
 						</div>
 						<div class="form-group">
-							<label for="password">Password:</label> <i
-								class="glyphicon glyphicon-lock "></i> <input type="password"
-								class="form-control box " id="password" name="password"
+							<label for="password">Password:</label> 							<input type="password"
+								class="form-control box text-center" id="password" name="password"
 								placeholder="Enter your Password" required="required">
 						</div>
 						<button type="submit" class="btn btn-default">Submit</button>
@@ -48,5 +58,10 @@
 
 	</div>
 	</div>
+	
+	   <!-- jQuery first, then Bootstrap JS. -->
+	   <script src="js/jquery.js"></script>
+           <script src="bootstrap-4.0.0-alpha.6-dist/js/bootstrap.min.js"></script>
+	
 </body>
 </html>
